# copycat_code_web

./: Cargo.toml
src/: main.rs
src/auth/: controller.rs  mod.rs
src/course/: controller.rs  mod.rs  model.rs  service.rs
src/db_connector/: mod.rs
src/lecture/: model.rs
src/module/: controller.rs  mod.rs  model.rs  service.rs
src/practice/: model.rs
src/user/: controller.rs  mod.rs  model.rs  service.rs
